Prevent tap highlight on mobile

--- a/template_assets/css/main.css
+++ b/template_assets/css/main.css
@@ -3,6 +3,8 @@ body {
 	padding: 0;
 	font-family: Arial,sans-serif;
 	font-size: 12px;
+	-webkit-touch-callout:none; /* prevent callout to copy image, etc when tap to hold */
+	-webkit-tap-highlight-color:rgba(0,0,0,0); /* prevent tap highlight color / shadow */
 }
 .subnav {
 	margin: 0 !important;
